# text

./: .gitignore  .gitmodules  .style.yapf  CMakeLists.txt  CONDUCT.md  LICENSE  LICENSE.CLA  README.md
.github/: funding.yml
docs/funding/source/: thephd-text-fall-2019.bib  thephd-text-fall-2019.tex  wg21.cls
include/: span
include/phd/: text.hpp
include/phd/text/: ascii.hpp  basic_c_string_view.hpp  basic_text.hpp  basic_text_view.hpp  c_string_view.hpp  char8_t.hpp  code_point.hpp  code_unit.hpp  decode.hpp  decode_iterator.hpp  decode_view.hpp  default_encoding.hpp  empty_state.hpp  encode.hpp  encode_result.hpp  encoding.hpp  encoding_error.hpp  encoding_scheme.hpp  endian.hpp  error_handler.hpp  execution.hpp  forward.hpp  is_bidirectional_encoding.hpp  is_code_point_replaceable.hpp  is_code_unit_replaceable.hpp  is_full_range_representable.hpp  is_ignorable_error_handler.hpp  is_transcoding_compatible.hpp  is_unicode_code_point.hpp  normalization.hpp  state.hpp  subrange.hpp  text.hpp  text_traits.hpp  text_view.hpp  transcode.hpp  transcode_view.hpp  unbounded.hpp  unicode_code_point.hpp  unicode_scalar_value.hpp  (+5 more)
include/phd/text/detail/: adl.hpp  byte_iterator.hpp  memory.hpp  range.hpp  type_traits.hpp  unicode.hpp  windows.hpp  word_iterator.hpp
tests/: CMakeLists.txt
tests/include/phd/text/tests/: basic_unicode_strings.hpp
tests/source/: decode.cpp  decode_view.cpp  encode.cpp  encoding.cpp  encoding_scheme.decode.cpp  encoding_scheme.encode.cpp  errors.cpp  main.cpp  text.cpp  text_view.cpp  transcode.cpp
